# api_to_s3

./: main.py  pyproject.toml
lib_dev/: balldontlie.py  smartbetting.py  utils.py
nba_dev/bronze/: teams.py
