[project]
name = "api-to-s3"
version = "0.1.0"
description = ""
authors = [
    {name = "Mateus Kasuya",email = "mateusvbkasuya@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "boto3 (>=1.39.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
ruff = "^0.12.2"

[tool.taskipy.tasks]
fix = "ruff check . --fix"
run = "poetry run python src/main.py"
format = "ruff format ."

